benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/debug/bignum_ModExp_Add_iter4_error.log
=== Verification Error - Iteration 4 ===
File: benchmarks/verus/bignum/files/bignum_ModExp_Add.rs
Time: 2025-09-15 11:09:01

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_impl.rs:32:28
   |
32 |     ensures ValidBitString(result@), Str2Int(result@) == n
   |                            ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_impl.rs:32:46
   |
32 |     ensures ValidBitString(result@), Str2Int(result@) == n
   |                                              ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_impl.rs:80:28
   |
80 |     ensures ValidBitString(result@), Str2Int(result@) == n
   |                            ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_impl.rs:80:46
   |
80 |     ensures ValidBitString(result@), Str2Int(result@) == n
   |                                              ^^^^^^ not found in this scope

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0425`.

--------------------------------------------------------------------------------

Additional Output:
error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_impl.rs:32:28
   |
32 |     ensures ValidBitString(result@), Str2Int(result@) == n
   |                            ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_impl.rs:32:46
   |
32 |     ensures ValidBitString(result@), Str2Int(result@) == n
   |                                              ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_impl.rs:80:28
   |
80 |     ensures ValidBitString(result@), Str2Int(result@) == n
   |                            ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_impl.rs:80:46
   |
80 |     ensures ValidBitString(result@), Str2Int(result@) == n
   |                                              ^^^^^^ not found in this scope

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0425`.
